# daimon

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  TODO.md  build.rs  commitlint.toml  deny.toml
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.cursor/rules/: agentic-framework-patterns.mdc  git-workflow.mdc  rust-2024-standards.mdc  test-coverage.mdc
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml  stale.yml
.superpowers/sdd/: task-report.md
benches/: agent_bench.rs
daimon-core/: Cargo.toml
daimon-core/src/: archival_memory.rs  core_memory.rs  distributed.rs  document.rs  embedding.rs  episodic_memory.rs  error.rs  lib.rs  memory.rs  model.rs  stream.rs  stream_util.rs  tool.rs  tool_types.rs  types.rs  vector_store.rs
daimon-macros/: Cargo.toml
daimon-macros/src/: lib.rs
daimon-plugin-opensearch/: Cargo.toml
daimon-plugin-opensearch/src/: builder.rs  index_settings.rs  lib.rs  store.rs
daimon-plugin-pgvector/: Cargo.toml
daimon-plugin-pgvector/src/: builder.rs  lib.rs  migrations.rs  store.rs
daimon-provider-anthropic/: Cargo.toml
daimon-provider-anthropic/src/: lib.rs
daimon-provider-azure/: Cargo.toml
daimon-provider-azure/src/: embedding.rs  lib.rs  servicebus.rs  stream_util.rs
daimon-provider-bedrock/: Cargo.toml
daimon-provider-bedrock/src/: embedding.rs  lib.rs  sqs.rs
daimon-provider-gemini/: Cargo.toml
daimon-provider-gemini/src/: embedding.rs  lib.rs  pubsub.rs  stream_util.rs
daimon-provider-llamacpp/: Cargo.toml
daimon-provider-llamacpp/src/: embedding.rs  lib.rs
daimon-provider-local/: Cargo.toml
daimon-provider-local/src/: generic.rs  lib.rs  llamacpp.rs  llamacpp_embed.rs  llamars.rs  ollama.rs  ollama_embed.rs  openai_compat.rs
daimon-provider-openai/: Cargo.toml
daimon-provider-openai/src/: embedding.rs  lib.rs
daimon-provider-openrouter/: Cargo.toml
daimon-provider-openrouter/src/: lib.rs  retry.rs
docs/: agents.md  architecture.md  distributed.md  getting-started.md  multi-agent.md  orchestration.md  performance.md  plugin-development.md  providers.md  rag.md  tools.md  troubleshooting.md
docs/superpowers/specs/: 2026-07-08-mcp-sse-websocket-transports-design.md
examples/: azure_agent.rs  bedrock_agent.rs  chain.rs  gemini_agent.rs  mcp_client.rs  ollama_agent.rs  openrouter_agent.rs  rag_opensearch.rs  rag_pgvector.rs  simple_agent.rs  streaming.rs  tool_macro.rs  with_tools.rs
proto/: daimon_distributed.proto  daimon_mcp.proto
src/: error.rs  hooks.rs  lib.rs  prelude.rs  telemetry.rs
src/a2a/: client.rs  mod.rs  server.rs  types.rs
src/agent/: as_tool.rs  builder.rs  fork.rs  handoff.rs  hitl.rs  hot_swap.rs  mod.rs  resumable.rs  runner.rs  structured.rs  supervisor.rs
src/checkpoint/: file.rs  memory.rs  mod.rs  nats_kv.rs  redis.rs  replay.rs  sync.rs  traits.rs  types.rs
src/cost/: mod.rs  models.rs  tracker.rs
src/distributed/: amqp_broker.rs  broker.rs  grpc.rs  mod.rs  nats_broker.rs  redis_broker.rs  streaming.rs  types.rs  worker.rs
src/eval/: mod.rs  runner.rs  scenario.rs  scoring.rs
src/guardrails/: builtin.rs  content_policy.rs  mod.rs  traits.rs
src/mcp/: bridge.rs  client.rs  grpc_transport.rs  mod.rs  protocol.rs  server.rs  sse.rs  transport.rs  websocket.rs  ws_server.rs
src/memory/: archival_memory.rs  core_memory.rs  episodic_memory.rs  mod.rs  redis.rs  sliding_window.rs  sqlite.rs  sqlite_tiered.rs  summary.rs  tiered.rs  token_window.rs  traits.rs
src/middleware/: mod.rs  stack.rs  traits.rs
src/model/: anthropic.rs  azure.rs  bedrock.rs  gemini.rs  line_buffer.rs  mod.rs  ollama.rs  ollama_embed.rs  openai.rs  openai_embed.rs  retry.rs  traits.rs  types.rs
src/orchestration/: chain.rs  dag.rs  graph.rs  mod.rs  toposort.rs  workflow.rs
src/prompt/: builder.rs  dynamic.rs  few_shot.rs  mod.rs  template.rs
src/retriever/: in_memory.rs  in_memory_store.rs  knowledge_base.rs  mod.rs  qdrant.rs  tool.rs  traits.rs  types.rs  vector_store.rs
src/server/: mod.rs
src/stream/: mod.rs  types.rs
src/tool/: mod.rs  registry.rs  retry.rs  traits.rs  types.rs
tests/: a2a_feature_gate.rs  agent_loop.rs  broker_contract.rs  facade_local_provider.rs  facade_openai_anthropic_provider.rs  facade_openrouter_provider.rs  memory_tiered_agent.rs  stream_util_proptest.rs  streaming.rs
tests/common/: mod.rs
web/: .gitignore  README.md  angular.json  astro.config.mjs  package.json  pnpm-lock.yaml
web/public/docs/: distributed.md  getting-started.md  orchestration.md  performance.md  plugin-development.md  rag.md  tools.md
web/src/: content.config.ts  index.html  styles.css
web/src/app/: app.routes.server.ts  app.routes.ts  app.ts
web/src/app/components/header/: header.ts
web/src/app/components/sidebar/: sidebar.ts
web/src/app/pages/doc-page/: doc-page.ts
web/src/app/pages/landing/: landing.ts
web/src/components/: Header.astro  Icon.astro  Sidebar.astro
web/src/layouts/: BaseLayout.astro
web/src/lib/: base.ts  docs.ts  icons.ts  rehype-doc-links.mjs  version.ts
web/src/pages/: index.astro
web/src/pages/docs/: [...slug].astro
web/src/styles/: global.css
