[workspace]
members = [
    "daimon-core",
    "daimon-macros",
    "daimon-provider-local",
    "daimon-provider-bedrock",
    "daimon-provider-gemini",
    "daimon-provider-azure",
    "daimon-provider-llamacpp",
    "daimon-provider-openai",
    "daimon-provider-anthropic",
    "daimon-plugin-pgvector",
    "daimon-plugin-opensearch",
]

# All crates publish in lockstep: one version, bumped once per release.
[workspace.package]
version = "0.22.3"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lexmata/daimon"
homepage = "https://github.com/Lexmata/daimon"

[workspace.dependencies]
daimon-core = { path = "daimon-core", version = "0.22.3" }
daimon-macros = { path = "daimon-macros", version = "0.22.3" }
daimon-provider-local = { path = "daimon-provider-local", version = "0.22.3" }
daimon-provider-bedrock = { path = "daimon-provider-bedrock", version = "0.22.3" }
daimon-provider-gemini = { path = "daimon-provider-gemini", version = "0.22.3" }
daimon-provider-azure = { path = "daimon-provider-azure", version = "0.22.3" }
daimon-provider-llamacpp = { path = "daimon-provider-llamacpp", version = "0.22.3" }
daimon-provider-openai = { path = "daimon-provider-openai", version = "0.22.3" }
daimon-provider-anthropic = { path = "daimon-provider-anthropic", version = "0.22.3" }
daimon-plugin-pgvector = { path = "daimon-plugin-pgvector", version = "0.22.3" }
daimon-plugin-opensearch = { path = "daimon-plugin-opensearch", version = "0.22.3" }
tokio = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
futures = "0.3"
pin-project-lite = "0.2"
async-stream = "0.3"
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "query"], default-features = false }

[package]
name = "daimon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Rust-native AI agent framework"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daimon"
keywords = ["ai", "agent", "llm", "openai", "anthropic"]
categories = ["asynchronous", "api-bindings"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["openai", "anthropic", "macros", "ollama"]
macros = ["dep:daimon-macros"]
openai = ["dep:daimon-provider-openai"]
anthropic = ["dep:daimon-provider-anthropic"]
a2a = ["dep:reqwest"]
gemini = ["dep:daimon-provider-gemini"]
azure = ["dep:daimon-provider-azure"]
llamacpp = ["dep:daimon-provider-local"]
bedrock = ["dep:daimon-provider-bedrock"]
sqs = ["bedrock", "daimon-provider-bedrock/sqs"]
pubsub = ["gemini", "daimon-provider-gemini/pubsub"]
servicebus = ["azure", "daimon-provider-azure/servicebus"]
ollama = ["dep:reqwest", "dep:daimon-provider-local"]
local = ["dep:daimon-provider-local"]
llamars = ["dep:daimon-provider-local"]
sqlite = ["dep:rusqlite"]
redis = ["dep:redis"]
nats = ["dep:async-nats"]
amqp = ["dep:lapin"]
mcp = ["dep:reqwest", "dep:tokio-tungstenite"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:tracing-subscriber"]
http-server = ["dep:axum", "dep:tower-http"]
qdrant = ["dep:qdrant-client"]
pgvector = ["dep:daimon-plugin-pgvector"]
opensearch = ["dep:daimon-plugin-opensearch"]
grpc = ["dep:tonic", "dep:prost", "dep:tonic-prost"]
eval = []
full = ["openai", "anthropic", "a2a", "gemini", "azure", "bedrock", "ollama", "llamacpp", "llamars", "local", "macros", "mcp", "sqlite", "redis", "nats", "amqp", "otel", "http-server", "qdrant", "pgvector", "opensearch", "grpc", "eval", "sqs", "pubsub", "servicebus"]

[dependencies]
daimon-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
async-stream = { workspace = true }
jsonschema = { version = "0.48", default-features = false }
itoa = "1"
ryu = "1"
regex-lite = "0.1"

daimon-macros = { workspace = true, optional = true }
daimon-provider-bedrock = { workspace = true, optional = true }
daimon-provider-gemini = { workspace = true, optional = true }
daimon-provider-azure = { workspace = true, optional = true }
daimon-provider-local = { workspace = true, optional = true }
daimon-provider-openai = { workspace = true, optional = true }
daimon-provider-anthropic = { workspace = true, optional = true }
daimon-plugin-pgvector = { workspace = true, optional = true }
daimon-plugin-opensearch = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rusqlite = { version = "0.40", features = ["bundled"], optional = true }
redis = { version = "1", features = ["tokio-comp", "aio", "connection-manager"], optional = true }
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.32", features = ["http-proto"], optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
axum = { version = "0.8", optional = true }
tower-http = { version = "0.7", features = ["cors"], optional = true }
qdrant-client = { version = "1", optional = true }
tonic = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
tonic-prost = { version = "0.14", optional = true }
async-nats = { version = "0.50", optional = true }
lapin = { version = "4", optional = true }
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"], optional = true }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proptest = "1"
criterion = { version = "0.8", features = ["async_tokio"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[example]]
name = "simple_agent"
path = "examples/simple_agent.rs"
required-features = ["openai"]

[[example]]
name = "with_tools"
path = "examples/with_tools.rs"
required-features = ["openai"]

[[example]]
name = "streaming"
path = "examples/streaming.rs"
required-features = ["openai"]

[[example]]
name = "bedrock_agent"
path = "examples/bedrock_agent.rs"
required-features = ["bedrock"]

[[example]]
name = "gemini_agent"
path = "examples/gemini_agent.rs"
required-features = ["gemini"]

[[example]]
name = "azure_agent"
path = "examples/azure_agent.rs"
required-features = ["azure"]

[[example]]
name = "ollama_agent"
path = "examples/ollama_agent.rs"
required-features = ["ollama"]

[[example]]
name = "tool_macro"
path = "examples/tool_macro.rs"
required-features = ["openai", "macros"]

[[example]]
name = "chain"
path = "examples/chain.rs"
required-features = ["openai"]

[[example]]
name = "mcp_client"
path = "examples/mcp_client.rs"
required-features = ["mcp", "openai"]

[[example]]
name = "rag_pgvector"
path = "examples/rag_pgvector.rs"
required-features = ["pgvector"]

[[example]]
name = "rag_opensearch"
path = "examples/rag_opensearch.rs"
required-features = ["opensearch"]

[[bench]]
name = "agent_bench"
harness = false
