[package]
name = "daimon-core"
version = "0.18.0"
edition = "2024"
rust-version = "1.95"
description = "Core traits and types for the Daimon AI agent framework — implement Model to add providers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lexmata/daimon"
homepage = "https://github.com/Lexmata/daimon"
documentation = "https://docs.rs/daimon-core"
keywords = ["ai", "agent", "llm", "trait", "provider"]
categories = ["asynchronous", "api-bindings"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
futures = "0.3"
pin-project-lite = "0.2"
async-stream = "0.3"
tokio = { version = "1", features = ["rt"] }
