[package]
name = "daimon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core traits and types for the Daimon AI agent framework — implement Model to add providers"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daimon-core"
keywords = ["ai", "agent", "llm", "trait", "provider"]
categories = ["asynchronous", "api-bindings"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
async-stream = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
