[package]
name = "daimon-macros"
version = "0.13.0"
edition = "2024"
rust-version = "1.85"
description = "Proc macros for the Daimon AI agent framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lexmata/daimon"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
