[package]
name = "daimon-macros"
version = "0.18.0"
edition = "2024"
rust-version = "1.95"
description = "Proc macros for the Daimon AI agent framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lexmata/daimon"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
