[package]
name = "daimon-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Proc macros for the Daimon AI agent framework"
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
