[package]
name = "daimon-plugin-opensearch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "OpenSearch k-NN backed VectorStore plugin for the Daimon AI agent framework"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daimon-plugin-opensearch"
keywords = ["ai", "agent", "opensearch", "rag", "vector-store"]
categories = ["asynchronous", "database"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
daimon-core = { workspace = true }
opensearch = { version = "2", default-features = false, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[features]
default = []
aws-auth = ["opensearch/aws-auth"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
