[package]
name = "daimon-plugin-pgvector"
version = "0.16.0"
edition = "2024"
rust-version = "1.85"
description = "pgvector-backed VectorStore plugin for the Daimon AI agent framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lexmata/daimon"
homepage = "https://github.com/Lexmata/daimon"
documentation = "https://docs.rs/daimon-plugin-pgvector"
keywords = ["ai", "agent", "pgvector", "rag", "vector-store"]
categories = ["asynchronous", "database"]

[dependencies]
daimon-core = { version = "0.16.0", path = "../daimon-core" }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
pgvector = { version = "0.4", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
