[package]
name = "daimon-plugin-pgvector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "pgvector-backed VectorStore plugin for the Daimon AI agent framework"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daimon-plugin-pgvector"
keywords = ["ai", "agent", "pgvector", "rag", "vector-store"]
categories = ["asynchronous", "database"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
daimon-core = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
pgvector = { version = "0.4", features = ["postgres"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
