[package]
name = "daimon-provider-azure"
version = "0.16.0"
edition = "2024"
rust-version = "1.85"
description = "Azure OpenAI provider for the Daimon AI agent framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lexmata/daimon"
homepage = "https://github.com/Lexmata/daimon"
documentation = "https://docs.rs/daimon-provider-azure"
keywords = ["ai", "agent", "llm", "azure", "openai"]
categories = ["asynchronous", "api-bindings"]

[features]
default = []
servicebus = []

[dependencies]
daimon-core = { path = "../daimon-core", version = "0.16.0" }
tokio = { version = "1", features = ["rt", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
async-stream = "0.3"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
