[package]
name = "daimon-provider-azure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Azure OpenAI provider for the Daimon AI agent framework"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daimon-provider-azure"
keywords = ["ai", "agent", "llm", "azure", "openai"]
categories = ["asynchronous", "api-bindings"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
servicebus = []

[dependencies]
daimon-core = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
