[package]
name = "daimon-provider-bedrock"
version = "0.18.0"
edition = "2024"
rust-version = "1.95"
description = "Amazon Bedrock provider for the Daimon AI agent framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lexmata/daimon"
homepage = "https://github.com/Lexmata/daimon"
documentation = "https://docs.rs/daimon-provider-bedrock"
keywords = ["ai", "agent", "llm", "bedrock", "aws"]
categories = ["asynchronous", "api-bindings"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
sqs = ["dep:aws-sdk-sqs"]

[dependencies]
daimon-core = { path = "../daimon-core", version = "0.18.0" }
tokio = { version = "1", features = ["rt", "time", "sync"] }
serde_json = "1"
tracing = "0.1"
async-stream = "0.3"
aws-sdk-bedrockruntime = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types = "1"
aws-sdk-sqs = { version = "1", optional = true }
