[package]
name = "daimon-provider-bedrock"
version = "0.18.0"
edition = "2024"
rust-version = "1.95"
description = "Amazon Bedrock provider for the Daimon AI agent framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lexmata/daimon"
homepage = "https://github.com/Lexmata/daimon"
documentation = "https://docs.rs/daimon-provider-bedrock"
keywords = ["ai", "agent", "llm", "bedrock", "aws"]
categories = ["asynchronous", "api-bindings"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
sqs = ["dep:aws-sdk-sqs"]

[dependencies]
daimon-core = { path = "../daimon-core", version = "0.18.0" }
tokio = { version = "1", features = ["rt", "time", "sync"] }
serde_json = "1"
tracing = "0.1"
async-stream = "0.3"
# default-features disabled to drop the legacy hyper 0.14 + rustls 0.21 HTTP
# client (which pulls the advisory-affected rustls-webpki 0.101). We supply a
# modern rustls 0.23 / aws-lc client explicitly via aws-smithy-http-client.
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["rt-tokio"] }
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "credentials-process", "sso"] }
aws-smithy-types = "1"
aws-smithy-http-client = { version = "1", features = ["rustls-aws-lc"] }
aws-smithy-runtime-api = "1"
aws-sdk-sqs = { version = "1", default-features = false, features = ["rt-tokio"], optional = true }
