[package]
name = "daimon-provider-bedrock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Amazon Bedrock provider for the Daimon AI agent framework"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daimon-provider-bedrock"
keywords = ["ai", "agent", "llm", "bedrock", "aws"]
categories = ["asynchronous", "api-bindings"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
sqs = ["dep:aws-sdk-sqs"]

[dependencies]
daimon-core = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync"] }
serde_json = { workspace = true }
tracing = { workspace = true }
async-stream = { workspace = true }
# default-features disabled to drop the legacy hyper 0.14 + rustls 0.21 HTTP
# client (which pulls the advisory-affected rustls-webpki 0.101). We supply a
# modern rustls 0.23 / aws-lc client explicitly via aws-smithy-http-client.
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["rt-tokio"] }
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "credentials-process", "sso"] }
aws-smithy-types = "1"
aws-smithy-http-client = { version = "1", features = ["rustls-aws-lc"] }
aws-smithy-runtime-api = "1"
aws-sdk-sqs = { version = "1", default-features = false, features = ["rt-tokio"], optional = true }
