[package]
name = "daimon-provider-gemini"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Google Gemini provider for the Daimon AI agent framework"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daimon-provider-gemini"
keywords = ["ai", "agent", "llm", "gemini", "google"]
categories = ["asynchronous", "api-bindings"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
pubsub = ["dep:base64"]

[dependencies]
daimon-core = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
base64 = { version = "0.22", optional = true }
