[package]
name = "daimon-provider-llamacpp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Deprecated: re-exports daimon-provider-local::llamacpp. Depend on daimon-provider-local directly."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daimon-provider-llamacpp"
keywords = ["ai", "agent", "llm", "llamacpp", "local"]
categories = ["asynchronous", "api-bindings"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
daimon-provider-local = { workspace = true }
